Support style name property in QTextCharFormat

The support for setting the style name in the QTextDocument
API was never added, as revealed by the example in the
linked bug report.

The actual bug reported there (style names not working with
some Helvetica Neue) is not reproducible anymore.

[ChangeLog][QtGui][Text] Added support for setting the font's
style name in QTextCharFormat.

Task-number: QTBUG-22813
Change-Id: I8f4d12151c3611aa30965fd963bc93f7c4264e23
Reviewed-by: Lars Knoll <lars.knoll@qt.io>