src/gui/text/qtextformat.h
@@ -189,6 +189,7 @@ public:
         FontKerning = 0x1FE5,
         FontHintingPreference = 0x1FE6,
         FontFamilies = 0x1FE7,
+        FontStyleName = 0x1FE8,
         FontFamily = 0x2000,
         FontPointSize = 0x2001,
         FontSizeAdjustment = 0x2002,
@@ -433,6 +434,11 @@ public:
     { setProperty(FontFamilies, QVariant(families)); }
     inline QVariant fontFamilies() const
     { return property(FontFamilies); }
+
+    inline void setFontStyleName(const QString &styleName)
+    { setProperty(FontStyleName, styleName); }
+    inline QVariant fontStyleName() const
+    { return property(FontStyleName); }
 
     inline void setFontPointSize(qreal size)
     { setProperty(FontPointSize, size); }
